These are the changes of the public releases:
Spe 0.8
-------
    [4.g]
        Fixes:
            * XRCed is now optional
    [4.f]
        Fixes:
            * SPE.py crashed with IndexError in OnProcessEnded()
            * can't turn off remember files
            * Class Definition below an if statement
            * Deleted files are not seen as changed
            * spaces in filenames... gronk!
            * Unnecessary question on closing empty file
            * Recent filename in the titlebar after closing all files
            * SPE.py crashed with IndexError in onFrameTab() (Closes LP #200439)
            * SPE.py crashed with PyDeadObjectError in __getattr__() (Closes LP #202481)
            * SPE.py crashed with ValueError in SetPageText() (Closes LP #207024)
            * Fix copy in output window
    [4.e]
        New features:
        
            * SPE blender server: interact in realtime with Blender through PyCrust or Ipython shell
            
	Major bugfix release:
	    * Comment and Uncomment keyboard shortcuts fixed for Mac 
	    * Finding in Folded Items Fixed (closes Berlios #10688)
	    * Launching Kiki when installed on the system
	    * Index tab in sidebar (closes launchpad #204751)
	    * pychecker integration
	    * XRCed integration
	    
    [4.d]
	Major bugfix release:
	    * Rewrite of internal code to fix cpu leak when SPE is not in focus
	    * Blender fix (Witold)
	    * Kiki Windows path
	    
    [4.c]
	New features:

	    * new versions of WinPdb debugger, PyChecker, wxGlade & XRCed gui designer
	    * clear output pane
	    * support for wxPython 2.8
	    * linux support for nautilus, gnome-terminal, konqueror, konsole, thunar
	    * improved blender support up to 2.45 (by Witold)

	Fixes:

	    * sidebar sash more tolerant
	    * show path in title (linux)
	    * run with filename with spaces
	    * nicer debug dialog box
	    * kill process fix
	    * notebook
	    * insert signature
	    * numpad keys (by isolationism)